# notes-demo-server

./: .env  Cargo.toml  Procfile  readme.md
.github/workflows/: deploy.yml
src/: main.rs
