[package]
name = "notes-demo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
notes-demo = { path = "../notes-demo" }

