[package]
name = "notes-demo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
#notes-demo = { path = "../notes-demo" }
notes-demo = { git = "https://github.com/rora-rs/note-demo", rev = "339b6a454526c33f426a2406c03c256ded68ee16" }
dotenv = "0.15.0"

